crates/iroha_ffi/proc_macro/tests/ui_fail/missing_repr.rs
//! Compile-fail test that validates the missing `#[repr(C)]` diagnostic.

use iroha_ffi::FfiType;

#[derive(Clone, Copy, FfiType)]
pub struct MissingRepr {
    field: u32,
}

fn main() {}
